fix category count spacing back to original.

--- a/sass/sidebar.sass
+++ b/sass/sidebar.sass
@@ -16,7 +16,6 @@
     #category_count
         margin-left: 0.3em
         font-size: 0.8em
-        letter-spacing: 0.1em
     .search_form 
         margin-top: 50px
 
